Fix HTML encoding issues in movies.html

--- a/movies.html
+++ b/movies.html
@@ -146,14 +146,14 @@ const movies = [
   { title: "Kabali", year: 2016, poster: "kabali_poster.jpg", trailer: "https://www.youtube.com/watch?v=9mdJV5-eias" },
   { title: "Enthiran", year: 2010, poster: "enthiran_poster.jpg", trailer: "https://www.youtube.com/watch?v=3MuXrN8L9ro" },
   { title: "Vivegam", year: 2017, poster: "vivegam_poster.jpg", trailer: "https://www.youtube.com/watch?v=2GgxMu0K8kA" },
-  { title: "Ghilli", year: 2006, poster: "ghilli_poster.jpg", trailer: "https://www.youtube.com/watch?v=jJFi-jw2W2k" },
-  { title: "Jailer", year: 2023, poster: "jailer_poster.jpg", trailer: "https://www.youtube.com/watch?v=tJZtOrm-WPk" },
-  { title: "Meiyazhagan", year: 2024, poster: "meiyazhagan_poster.jpg", trailer: "https://www.youtube.com/watch?v=6z2VmMCZogU" },
-  { title: "Ambikapathy", year: 2013, poster: "ambikapathy_poster.jpg", trailer: "https://www.youtube.com/watch?v=KqfXxE0VxnA" },
-  { title: "Anjaan", year: 2014, poster: "Anjaan_poster.jpg", trailer: "https://www.youtube.com/watch?v=keIgz0V5cS4" },
-  { title: "Anegan", year: 2015, poster: "Anegan_poster.jpg", trailer: "https://www.youtube.com/watch?v=fWl5RbLQ4Jo" },
-  { title: "10 Endrathukulla", year: 2015, poster: "pathu_endrathukulla_poster.jpg", trailer: "https://www.youtube.com/watch?v=wlQZndvZpN0" },
-  { title: "Amaran", year: 2024, poster: "Amaran_poster.jpg", trailer: "https://www.youtube.com/watch?v=wWB6dVubf2I" },
+  { title: "Ghilli", year: 2006, poster: "ghilli_poster.jpg", trailer: "https://youtu.be/EtJXEmW_XNM?si=Dy-m4hFl94-xtQOt" },
+  { title: "Jailer", year: 2023, poster: "jailer_poster.jpg", trailer: "https://youtu.be/Y5BeWdODPqo?si=BlkxQyfRD-5FZoI3" },
+  { title: "Meiyazhagan", year: 2024, poster: "meiyazhagan_poster.jpg", trailer: "https://youtu.be/Ahp840_aCoI?si=6pLlLd7EdzVx6x1u" },
+  { title: "Ambikapathy", year: 2013, poster: "ambikapathy_poster.jpg", trailer: "https://youtu.be/tY92_6LgVZQ?si=nuEzBuKbYRwX6zyp" },
+  { title: "Anjaan", year: 2014, poster: "Anjaan_poster.jpg", trailer: "https://youtu.be/MJxEQPMh_io?si=5H8qu-fcTBXgCO-q" },
+  { title: "Anegan", year: 2015, poster: "Anegan_poster.jpg", trailer: "https://youtu.be/ZuMi9YvCVxg?si=YlAD-CftjgMt_sfc" },
+  { title: "10 Endrathukulla", year: 2015, poster: "pathu_endrathukulla_poster.jpg", trailer: "https://youtu.be/3vygWI0XK4E?si=awwIOqZc-tsCcyPu" },
+  { title: "Amaran", year: 2024, poster: "Amaran_poster.jpg", trailer: "https://youtu.be/hylIXfZeB4c?si=jiE8IWfQXV_SBjSR" },
 ];
 
 const movieContainer = document.getElementById("movieContainer");
@@ -186,3 +186,4 @@ searchBox.addEventListener("input", () => {
 </script>
 </body>
 </html>
+
