Fix HTML encoding issues in movies.html

--- a/movies.html
+++ b/movies.html
@@ -134,18 +134,18 @@
 </div>
 <script>
 const movies = [
-  { title: "Petta", year: 2019, poster: "petta_poster.jpg", trailer: "https://www.youtube.com/watch?v=2TBgkk4JhE0" },
+  { title: "Petta", year: 2019, poster: "petta_poster.jpg", trailer: "https://youtu.be/FCB0ZfQ9Rzs?si=llu7adLO9nI_tboI" },
   { title: "Master", year: 2021, poster: "master_poster.jpg", trailer: "https://www.youtube.com/watch?v=UTiXQcrLlv4" },
   { title: "Leo", year: 2023, poster: "poster_leo.jpg", trailer: "https://www.youtube.com/watch?v=Po3jStA673E" },
   { title: "Vikram", year: 2022, poster: "vikram_poster.jpg", trailer: "https://www.youtube.com/watch?v=OKBMCL-frPU" },
   { title: "Mersal", year: 2017, poster: "mersal_poster.jpg", trailer: "https://www.youtube.com/watch?v=3FBIp8qKlp4" },
-  { title: "PS: Ponniyin Selvan", year: 2022, poster: "ps_poster.jpg", trailer: "https://www.youtube.com/watch?v=KbtzELcA9Yk" },
+  { title: "PS: Ponniyin Selvan", year: 2022, poster: "ps_poster.jpg", trailer: "https://youtu.be/D4qAQYlgZQs?si=yuQZZrEBeObeehl6" },
   { title: "Soorarai Pottru", year: 2020, poster: "surya_retro.jpg", trailer: "https://www.youtube.com/watch?v=fa_DIwRsa9o" },
   { title: "Thunivu", year: 2023, poster: "thunivu_poster.jpg", trailer: "https://www.youtube.com/watch?v=j6ZBM9E7kKs" },
   { title: "Varisu", year: 2023, poster: "varisu_poster.jpg", trailer: "https://www.youtube.com/watch?v=pfZkBj7J5d8" },
   { title: "Kabali", year: 2016, poster: "kabali_poster.jpg", trailer: "https://www.youtube.com/watch?v=9mdJV5-eias" },
-  { title: "Enthiran", year: 2010, poster: "enthiran_poster.jpg", trailer: "https://www.youtube.com/watch?v=3MuXrN8L9ro" },
-  { title: "Vivegam", year: 2017, poster: "vivegam_poster.jpg", trailer: "https://www.youtube.com/watch?v=2GgxMu0K8kA" },
+  { title: "Enthiran", year: 2010, poster: "enthiran_poster.jpg", trailer: "https://youtu.be/sY_F6issHsU?si=bitCj8tNMXLVeITp" },
+  { title: "Vivegam", year: 2017, poster: "vivegam_poster.jpg", trailer: "https://youtu.be/yJdHR8nCYWk?si=RjuZve0eE8RIHFTH" },
   { title: "Ghilli", year: 2006, poster: "ghilli_poster.jpg", trailer: "https://youtu.be/EtJXEmW_XNM?si=Dy-m4hFl94-xtQOt" },
   { title: "Jailer", year: 2023, poster: "jailer_poster.jpg", trailer: "https://youtu.be/Y5BeWdODPqo?si=BlkxQyfRD-5FZoI3" },
   { title: "Meiyazhagan", year: 2024, poster: "meiyazhagan_poster.jpg", trailer: "https://youtu.be/Ahp840_aCoI?si=6pLlLd7EdzVx6x1u" },
@@ -186,4 +186,5 @@ searchBox.addEventListener("input", () => {
 </script>
 </body>
 </html>
+
 
